--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-.idea/*
-cmake-build-debug/*
+.idea/
+
+cmake-build-debug/CMakeLists.txt.user
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/CMakeFiles
+cmake-build-debug/CMakeScripts
+cmake-build-debug/Testing
+cmake-build-debug/Makefile
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/install_manifest.txt
+cmake-build-debug/compile_commands.json
+cmake-build-debug/CTestTestfile.cmake
+cmake-build-debug/_deps
