--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .idea/
 
+cmake-build-debug/*
+
 cmake-build-debug/CMakeLists.txt.user
 cmake-build-debug/CMakeCache.txt
 cmake-build-debug/CMakeFiles
