--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(learningCPP)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc")
 
-add_executable(learningCPP main.cpp)
+add_executable(learningCPP main.cpp Song.cpp Song.h)
