Added DDP Dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.25)
 project(learningCPP)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc")
 
 add_executable(learningCPP main.cpp)
+
+find_package(dpp CONFIG REQUIRED)
+target_link_libraries(learningCPP PRIVATE dpp::dpp)
+
+
